# sample-llm

./: DEPLOYMENT.md  README.md  TRAINING.md  chat.py  config.py  main.py  model.py  pyproject.toml  run.sh  run_macos.sh  run_production.sh  test_chat.py  test_llm.py  train.py  train_model.sh
static/: index.html  styles.css
templates/: chat.html
