[project]
name = "pyth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
    "fastapi>=0.112.0",
    "uvicorn>=0.29.0",
    "mypy>=1.8.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.7",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
