[project]
name = "pyth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15.2",
    "fastapi>=0.112.0",
    "uvicorn>=0.29.0",
    "mypy>=1.8.0",
    "transformers>=4.38.0",
    "torch>=2.2.0",
    "accelerate>=0.27.0",
    "safetensors>=0.4.0",
    "requests>=2.31.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.7",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
train = [
    "datasets>=2.15.0",
    "huggingface_hub>=0.20.3",
    "peft>=0.7.0",
    "tqdm>=4.66.0",
    "numpy>=1.26.0",
]

chat = [
    "colorama>=0.4.6",
    "markdown>=3.5.1",
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
